Finish CORS and Secrets
